Fix padding issue on mobile

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -64,6 +64,7 @@
   justify-content: center;
   align-items: center;
   margin: 0;
+  padding: 20px;
 }
 p {
   margin-bottom: 5px;
